[package]
name = "tokio-rusqlite"
version = "0.6.0"
authors = ["Programatik <programatik29@gmail.com>", "Adi Salimgereev <adisalimgereev@gmail.com>"]
edition = "2021"
description = "Asynchronous handle for rusqlite library."
documentation = "https://docs.rs/tokio-rusqlite"
homepage = "https://github.com/programatik29/tokio-rusqlite"
repository = "https://github.com/programatik29/tokio-rusqlite"
license = "MIT"
keywords = ["async", "rusqlite", "sqlite"]
categories = ["asynchronous", "database"]

[features]
bundled = ["rusqlite/bundled"]

[dependencies]
crossbeam-channel = "0.5"
rusqlite = "0.37"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
